# zerostack

./: .gitmodules  AGENTS.md  CONFIG.md  Cargo.toml  README.md  flake.nix  setup-neovim.sh
.github/workflows/: ci.yml  update-models.yml
data/: models.json
docs/: ARCHITECTURE_FILE.md  COMMANDS.md  CONFIG.md  HASHEDIT.md  PROVIDERS.md  SUBAGENTS.md  index.html
nix/package/: dev-shell.nix
packaging/aur/: .SRCINFO  PKGBUILD
packaging/conda/: build.sh  meta.yaml
packaging/homebrew/: zerostack.rb
prompts/: ask.md  brainstorm.md  code.md  debug.md  default.md  frontend-design.md  plan.md  refactor.md  review-security.md  review.md  simplify.md  write-prompt.md
scripts/: gen-models-catalog.sh  sync-version.sh
src/: auth.rs  cli.rs  event.rs  fs.rs  main.rs  models_catalog.rs  pricing.rs  provider.rs  sandbox.rs
src/agent/: builder.rs  memory.rs  prompt.rs  runner.rs
src/config/: load.rs  mod.rs  types.rs
src/context/: mod.rs  prompts.rs  themes.rs
src/extras/: mod.rs  status_signals.rs  truncate.rs
src/permission/: ask.rs  checker.rs  mod.rs  pattern.rs
src/session/: mod.rs  storage.rs
src/tests/: acp_tests.rs  atomic_write_tests.rs  auth_tests.rs  bash_tests.rs  checker_tests.rs  config_tests.rs  crc_tests.rs  edit_tests.rs  grep_tests.rs  list_dir_tests.rs  loop_tests.rs  markdown_tests.rs  memory_tests.rs  mod.rs  multimodal_tests.rs  normalize_tests.rs  picker_tests.rs  provider_tests.rs  renderer_tests.rs  session_storage_tests.rs  session_tests.rs  shell_mode_tests.rs  slash_add_tests.rs  slash_init_tests.rs  status_tests.rs  statusline_tests.rs  todo_tests.rs  tools_mod_tests.rs
src/ui/: cmd_picker.rs  dot_cmd.rs  event_handler.rs  events.rs  input.rs  (+9 more)
themes/: dracula.json  everforest.json  gruvbox.json  just-aubergine.json  just-black.json  just-charcoal.json  just-earthy.json  just-navy.json  nord.json
(+43 files in other folders)
