[package]
name = "zerostack"
version = "1.3.0"
edition = "2024"
authors = ["Giuseppe Della Vedova"]
description = "Minimalistic coding agent written in Rust, optimized for memory footprint and performance"
license = "GPL-3.0-only"
homepage = "https://github.com/gi-dellav/zerostack"
repository = "https://github.com/gi-dellav/zerostack"
readme = "README.md"
keywords = ["ai", "cli", "dev"]

[features]
default = ['loop', 'git-worktree', 'mcp']
loop = []
git-worktree = []
mcp = [
    "dep:rmcp",
    "rmcp?/client",
    "rmcp?/transport-child-process",
    "rmcp?/transport-streamable-http-client-reqwest",
]
acp = ["dep:agent-client-protocol"]

[dependencies]
rig = { version = "0.37", features = ["rmcp"] }
rmcp = { version = "1.7", optional = true, default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "process", "fs"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
futures = "0.3"
reqwest = "0.13"
dirs = "6"
compact_str = { version = "0.9", features = ["serde"] }
smallvec = "1"
regex = "1"
ignore = "0.4"
pulldown-cmark = "0.13"
include_dir = "0.7"
http = "1"
agent-client-protocol = { version = "0.12.0", optional = true }
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
debug = false
